--- a/src/locales/mk.json
+++ b/src/locales/mk.json
@@ -26,6 +26,7 @@
     "email": "Е-пошта",
     "contact": "Контакт",
     "hours": "Работно време",
-    "hoursValue": "Пон - Пет: 09:00 - 17:00"
+    "hoursValue": "Пон - Пет: 08:00 - 17:00",
+    "hoursValueWeekend": "Саб: 08:00 - 15:00"
   }
 }
